fixed body horizontal overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 body {
   background-color: rgb(0, 0, 0);
   color: white;
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   box-sizing: border-box;
   scroll-behavior: smooth;
